--- a/security/201802/login-using-ldap/public/index.html
+++ b/security/201802/login-using-ldap/public/index.html
@@ -61,14 +61,16 @@ myApp.controller("myCtrl", function($scope, $http) {
 		);
 	};
 
+	
 	$scope.logonAD = () => {
+		var url = $scope.getGroups? "/adGrp" : "/ad";
+		
 		$scope.response = "Please wait";		
-		$http.post('/ad', JSON.stringify($scope.ldap)).then(
+		$http.post(url, JSON.stringify($scope.ldap)).then(
 			(resp) => {$scope.response = resp.data;},
 			(resp) => {$scope.response = "Error: " + JSON.stringify(resp);}
 		);
-	};
-
+	};	
 	
 });
 
